# CAD_Exchanger

./: CMakeLists.txt  README.md
libCurves/: CMakeLists.txt
libCurves/include/: Circle.h  Curve3D.h  Ellipse.h  Helix.h  Utils.h
libCurves/src/: Circle.cpp  Ellipse.cpp  Helix.cpp
src/: main.cpp
